fixing some layout issues

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,5 +1,5 @@
-
 /***** NAV AREA *****/
+
 .contact-btns
     margin-top: 10px
     margin-bottom: 10px
@@ -20,14 +20,11 @@
     background-image: linear-gradient(rgba(13, 71, 161, 0.7),rgba(13, 71, 161, 0.7)), url(../img/hero.jpg)
     background-position: top center
     background-size: cover
-    height: 50vh
-
-@media only screen and (max-width: 580px)
-    .hero
-        height: 40vh
 
 .hero-text
     margin: 0 auto
+    padding-top: 10%
+    padding-bottom: 10%
 
 /**** Baloon Area ****/
 
@@ -63,23 +60,19 @@
     .container
         width: 70%
 
+//@media only screen and (max-width: 520px)
+//    .card-image img
+//        height: 90%
+
 .bio-image
     background-image: url(../img/scalehammer.jpg)
     background-position: top center
     background-size: cover
 
-//.img-wrap
-//    background-image: url(../img/headshot.jpg)
-//    background-position: top center
-//    background-size: cover
-//    min-height: 280px
-//    display: flex
-//    align-items: flex-end
-//    padding: 10px
-
 .card-p
     margin-top: .5em
     margin-bottom: .5em
+
 /*** Slider area ***/
 
 .img-container
@@ -92,31 +85,29 @@
 .bubble
     h4, h5
         margin-top: 0
+
 /*** contact-area ***/
 
 #contact-logo
     width: 100px
     margin-top: 50px
 
-
 /** practice areas page **/
-
 /** tab section **/
+
 .tabs-section
     background-image: url("../img/books.jpg")
     background-repeat: no-repeat
     background-size: 100% auto
     background-position: top left
 
-
 /** about page **/
+
 .about-section
     background-image: url(../img/pillars.jpg)
     background-repeat: no-repeat
     background-size: 100% auto
     background-position: top left
-    //height: 60vh
-
 
 @media only screen and (min-width: 660px)
     .profile-pic
@@ -124,12 +115,12 @@
         margin-left: 0
 
 /** contact page **/
+
 .contact-section
     background-image: url(../img/scale.jpg)
     background-repeat: no-repeat
     background-size: 100% auto
     background-position: top left
-    //height: 60vh
 
 .contact-img
     height: 150px
